# dmac-clab

./: .coverage  .gitignore  .pre-commit-config.yaml  .yamlfmt  .yamlfmt.yaml  AGENTS.md  README.md  invent.py  pyproject.toml
ansible/: README.md  ansible.cfg  requirements.yml
arista/dmac/evpn-vxlan-l3gw/: evl3gw.topology.yaml  evl3gw.topology.yaml.annotations.json
arista/dmac/evpn-vxlan-l3gw/docs/: DESIGN.md  IPAM.md
arista/dmac/evpn-vxlan-l3gw/startup_configs/: s1.txt
avd/evpn-vxlan-l3gw/: README.md  topology.yaml
clab-multivendor/: README.md  ansible-inventory.yml  lab.clab.yml
clab/arista/ai-wrk/: README.md
clab/arista/dmac/evpn-vxlan-l3gw/: README.md  evl3gw.topology.yaml  vars.yaml
clab/arista/dmac/evpn-vxlan-l3gw/datamodels/: datamodel-lean.json  datamodel-lean.yml  datamodel.json
clab/arista/dmac/evpn-vxlan-l3gw/docs/: DESIGN.md
clab/arista/dmac/evpn-vxlan-l3gw/nornir/inventory/: defaults.yml  groups.yml  hosts.yml
clab/arista/dmac/evpn-vxlan-l3gw/nornir/output/: h1.cfg  h2.cfg  h3.cfg  h4.cfg  h5.cfg  l1.cfg  l2.cfg  l3.cfg  l4.cfg  l5.cfg  s1.cfg  s2.cfg
clab/arista/dmac/evpn-vxlan-l3gw/nornir/templates/: defaults.j2  hosts.j2  leaves.j2  spines.j2
clab/arista/dmac/evpn-vxlan-l3gw/startup_configs/: l1.txt
configs/: .pre-commit-config.yaml  .ruff.toml  .yamlfmt.yaml  .yamllint.yaml
configs/nornir/: config.yml  nornir.yaml
configs/nornir/inventory/: defaults.yml  groups.yml  hosts.yml
docs/: NORNIR-INVENTORY-PRECEDENCE.md  NORNIR_SCRAPLI_CONFIG_FLOW.md  tools.MD
docs/tools/: prek.md  yamlfmt.md  yamllint.md
py_netauto/: README.md  __init__.py  config.py
py_netauto/cli/: README.md  __init__.py  filters.py  models.py  output.py  paths.py
py_netauto/cli/commands/: __init__.py  datamodel.py  push.py  render.py  sessions.py
py_netauto/datamodel/: COMPUTED_FIELDS.md  __init__.py  device.py  fabric.py  interface.py  loaders.py  models.py  network.py  topology.py
py_netauto/datamodel/exporters/: __init__.py  base.py  json_exporter.py  json_schema_exporter.py  yaml_exporter.py
py_netauto/datamodel/static_tests/: __init__.py  fabric-export.json  generate_output_dm  input-datamodel.yaml  lean-datamodel.schema.json  lean-datamodel.yaml  main.py  output-datamodel-schema.json  output-datamodel.json  output-datamodel.yml  test_mgmt_vrf.py
py_netauto/nornir_tasks/: get_device_info.py  lists_hosts.py  render_config.py  scrapli_config_device.py  scrapli_get_device_info.py
py_netauto/outputs/: datamodel-with-examples.json-schema.json  datamodel.json  datamodel.yml
py_netauto/utils/: debug_inventory.py  nornir_helpers.py
tests/: TEST_SUMMARY.md  __init__.py
tests/integration/: __init__.py  conftest.py
tests/unit/: __init__.py
tests/unit/cli/: test_filters.py  test_models.py  test_output.py  test_paths.py  test_render_command.py
