[project]
name = "dmac-clab"
version = "0.0.1"
description = "Python project to test network designs and automation workflows in Containerlab"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=10.0.0,<11.0.0",  # ansible-core 2.17.x - compatible with arista.avd
    "nornir>=3.5.0",
    "nornir-jinja2>=0.2.0",
    "nornir-napalm>=0.5.0",
    "nornir-rich>=0.2.0",
    "nornir-utils>=0.2.0",
    "pyavd[ansible]>=5.7.2",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "yamllint>=1.37.1",
    "dmac-clab",
    "basedpyright>=1.36.1",
    "prek>=0.2.22",
]

# When you try to install this project, don't look for a setup.py. Use the Hatchling engine to read my pyproject.toml and figure out what to do."
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "configs/.ruff.toml"

[tool.uv.sources]
dmac-clab = {path = ".", editable = true}

[tool.hatch.build.targets.wheel]
packages = ["py_netauto"]

[tool.pyright]
reportMissingTypeStubs = false

[lint.isort]
# Tells Ruff that 'py_netauto' is your local project, not a library like Nornir
known-first-party = ["py_netauto"]
