[project]
name = "py-netauto"
dynamic = ["version"]
description = "Python project to test network designs and automation workflows in Containerlab"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=10.0.0,<11.0.0",  # ansible-core 2.17.x - compatible with arista.avd
    "nornir>=3.5.0",
    "nornir-jinja2>=0.2.0",
    "nornir-napalm>=0.5.0",
    "nornir-rich>=0.2.0",
    "nornir-scrapli>=2025.1.30",
    "nornir-utils>=0.2.0",
    "pyavd[ansible]>=5.7.2",
    "pydantic-settings>=2.12.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
py-netauto = "py_netauto.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "yamllint>=1.37.1",
    "ty>=0.0.13",
    "prek>=0.2.22",
    "ipython>=9.9.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

# When you try to install this project, don't look for a setup.py. Use the Hatchling engine to read my pyproject.toml and figure out what to do."
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "configs/.ruff.toml"

[tool.hatch.version]
path = "py_netauto/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["py_netauto"]

[tool.pyright]
reportMissingTypeStubs = false

[lint.isort]
# Tells Ruff that 'py_netauto' is your local project, not a library like Nornir
known-first-party = ["py_netauto"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--ignore=ansible",
    "--strict-markers",  # Fail on unknown markers
    "-ra",               # Show summary of all test outcomes
]
python_files = "test_*.py"
markers = [
    "integration: Integration tests requiring Containerlab",
    "unit: Fast unit tests with mocked dependencies",
]